# telephony_telephony_data

./: BUILD.gn  README.en.md  README.md  README_zh.md  ohos.build
common/include/: data_storage_errors.h  data_storage_log_wrapper.h  parser_util.h  preferences_util.h  rdb_base_callback.h  rdb_base_helper.h  time_util.h
common/src/: data_storage_log_wrapper.cpp  parser_util.cpp  preferences_util.cpp  rdb_base_callback.cpp  rdb_base_helper.cpp
pdp_profile/include/: pdp_profile_ability.h  pdp_profile_data.h  rdb_pdp_profile_callback.h  rdb_pdp_profile_helper.h
pdp_profile/src/: pdp_profile_ability.cpp  rdb_pdp_profile_callback.cpp  rdb_pdp_profile_helper.cpp
sim/include/: rdb_sim_callback.h  rdb_sim_helper.h  sim_ability.h  sim_data.h
sim/src/: rdb_sim_callback.cpp  rdb_sim_helper.cpp  sim_ability.cpp
sms_mms/include/: rdb_sms_mms_callback.h  rdb_sms_mms_helper.h  sms_mms_ability.h  sms_mms_data.h
sms_mms/src/: rdb_sms_mms_callback.cpp  rdb_sms_mms_helper.cpp  sms_mms_ability.cpp
test/: BUILD.gn  data_storage_test.cpp
test/unittest/data_gtest/: BUILD.gn  data_storage_gtest.cpp  data_storage_gtest.h
test/unittest/data_test/: BUILD.gn  data_storage_test.cpp
